--- a/style.css
+++ b/style.css
@@ -6,6 +6,5 @@
 }
 
 #filter.active{
-    max-height: 400px; /* Adjust based on content */
-    transition: max-height 0.4s ease-in;
+    overflow: hidden;
 }
