--- a/style.css
+++ b/style.css
@@ -31,4 +31,5 @@
     cursor: pointer; /* indica que es clicable */
     text-align: center;
     vertical-align: middle;
+    white-space: pre-line;
 }
