fix: errors in recipe creation. style: advance some styling.

--- a/css/components.css
+++ b/css/components.css
@@ -13,4 +13,5 @@
 @import url('./components/toggle.css');
 @import url('./components/modals.css');
 @import url('./components/recipes.css');
-@import url('./components/buttons.css');
+@import url('./components/form.css');
+@import url('./components/table.css');
