--- a/css/base.css
+++ b/css/base.css
@@ -22,13 +22,12 @@ body {
     min-height: 100vh;
     padding: 0;
     background-color: var(--color-bg);
-    font-family: 'Exo 2', sans-serif;
-    font-size: 1rem;
+    font-family: 'Palatino Linotype', 'Book Antiqua', serif;
+    font-size: 1.2rem;
     color: var(--color-text);
     line-height: 1.6;
     text-align: justify;
     min-height: 100vh;
-    padding: 2rem;
 }
 /* Main  */
 main {
@@ -36,7 +35,8 @@ main {
     display: flex;
     flex-direction: column;
     gap: var(--spacing-lg);
-    padding: var(--spacing-lg);
+    
+    padding: var( --spacing-xxl);
 }
 /* Main Sections */
 section {
@@ -69,8 +69,7 @@ hr{
     height: 0.5px;
     
 }
-.recipe-text h3 {
-    font-family: 'Arial', sans-serif;   
+.recipe-text h3 {  
     font-size: 1.25rem;                  
     font-weight: 700;                     
     color: var(--color-title);                     
@@ -85,3 +84,8 @@ hr{
     line-height: 1.4;
     margin: 0;                          
   }
+  .list-item{
+    font-size: 0.9rem;
+  }
+
+  
