--- a/css/variables.css
+++ b/css/variables.css
@@ -23,6 +23,7 @@
     --color-surface-alt: #C8D8B2;      /* Light surface variation */
     --color-bg-paper: #fdf3e7;         /* color old paper */
     --color-bg-table-hover:#DDE6D1;    /* table cell hover */
+    --color-bg-hamburguer: #DADB68; /* hamburguer menu background */
   
     /* ==== Text ==== */
     --color-text: #2E3A1F;             /* Primary text */
