--- a/css/components/recipes.css
+++ b/css/components/recipes.css
@@ -2,8 +2,8 @@
    RECIPE SECTION
    ========================= */
    #section-list h1{
-    padding-top: 10rem;
-    padding-left: 7rem;
+    padding-top: 5rem;
+ 
     
   }
   #recipes-list .recipes-list-class {
@@ -11,9 +11,10 @@
     padding: 1rem;
     border-radius: 0.5rem;
     display: flex;
+    
     align-items: flex-start;
     gap: 1.5rem; 
-
+    justify-content: center;
     width: 100%;
     height: 11rem;
     box-sizing: border-box;
