--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -11,18 +11,23 @@
     z-index: 1000;
     padding: 0.5rem 5rem;
   }
+  .navbar h1{
+    white-space: nowrap;
+  }
   .navbar ul{
     list-style: none;
     display: flex;
     gap: 2rem;
     margin: 0;
     padding: 0;
+    flex-wrap: nowrap;
   }
   .navbar a {
     text-decoration: none;
     font-weight: bold;
     color:  var(--color-bg);
     transition: color 0.3s;
+    white-space: nowrap;
     
   }
   @media (hover: hover) and (pointer: fine) {
