--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -13,6 +13,25 @@
       font-size: 0.95rem;
     }
  }
+ @media (max-width: 900px) {
+  .meal-cell {
+    font-size: 0.8rem;
+  }
+  #weekly-menu thead th,
+  #weekly-menu tbody td:first-child {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .meal-cell {
+    font-size: 0.7rem;
+  }
+  #weekly-menu thead th,
+  #weekly-menu tbody td:first-child {
+    font-size: 0.8rem;
+  }
+}
 
 @media (max-width: 600px){
    #recipes-list{
@@ -31,16 +50,15 @@
    }
  }
 
- 
+/*!-- Navbar --*/
 
  @media (max-width: 900px) {
   .navbar{
     padding-left: 1rem;
   }
   header h1 {
-    text-align: left;      /* mueve el texto hacia la izquierda */
-    white-space: nowrap;   /* fuerza que esté en una sola línea */
-    font-size: 1.5rem;    /* opcional: reduce tamaño si es necesario */
+    text-align: left;      
+    white-space: nowrap;  
     overflow: hidden; 
     margin: 0;
    }
