--- a/css/utilities.css
+++ b/css/utilities.css
@@ -73,3 +73,7 @@
    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.2);
    background-color: var(--color-bg-paper);
  }
+ .table-wrapper {
+   overflow-x: auto;
+   -webkit-overflow-scrolling: touch
+ }
