--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -6,14 +6,7 @@
    - adaptive font sizes and spacing
 ========================================================= */
 
-@media (max-width: 1024px) {
-   #recipes-list {
-     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-   }
-   #recipes-list .recipes-list-class {
-      font-size: 0.95rem;
-    }
- }
+
  @media (max-width: 900px) {
   .meal-cell {
     font-size: 0.8rem;
@@ -22,9 +15,12 @@
   #weekly-menu tbody td:first-child {
     font-size: 0.9rem;
   }
+  #section-list{
+    padding-top: 8rem;
+  }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 600px){
   .meal-cell {
     font-size: 0.7rem;
   }
@@ -32,17 +28,82 @@
   #weekly-menu tbody td:first-child {
     font-size: 0.8rem;
   }
-}
 
-@media (max-width: 600px){
    #recipes-list{
       grid-template-columns: 1fr !important;
    }
    #recipes-list .recipes-list-class {
       font-size: 0.875rem; 
     }
+    /* form */
+    #difficulty-level{
+      display: inline-block;
+      font-size: 10px;
+    }
+    #difficulty-level legend{
+      font-size: 1.2rem;
+    }
+    #prep-time, #recipe-category{
+      width: 100%;
+    }
+    #quantity-input{
+      width: 48%;
+    }
+    #measure-select{
+      width: 50%;
+    }
+    #ingredient-input{
+      width: 70%;
+    }
+    #instructions-input{
+      width: 70%;
+    }
+  #second-search-buttons{
+    display: flex;
+    justify-content: center;
+    margin-left: 18%;
+    gap: 1rem;
+  }
+  /* recipe list */
+ 
+  #section-list h1 {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+  }
+
+  /* Cartas más compactas */
+  #recipes-list .recipes-list-class {
+    gap: 1rem;
+    height: 8rem; 
+    padding: 0.5rem;
+  }
+
+  /* smaller imagen */
+  .recipe-thumb {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  /* Compact text */
+  .recipe-text h3 {
+    font-size: 0.9rem;
+    -webkit-line-clamp: 2;
+  }
+
+  .recipe-text p {
+    font-size: 10px;
+  }
+  #page-info{
+    font-size: 0.7rem;
+  }
+  #buttons-list{
+    margin-top: 0;
+    gap:0.3rem;
+  }
   
 }
+
+
 
 @media (hover: hover) and (pointer: fine) {
    #recipes-list .recipes-list-class:hover {
