--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -71,7 +71,7 @@
     font-size: 1.5rem;
   }
 
-  /* Cartas más compactas */
+  /* More compact cards */
   #recipes-list .recipes-list-class {
     gap: 1rem;
     height: 8rem; 
