--- a/css/components/toggle.css
+++ b/css/components/toggle.css
@@ -1,12 +1,16 @@
 /* =========================
    TOGGLE
    ========================= */
-   #filter {
-    max-height: 0;
+   .toggle-content {
     overflow: hidden;
+    max-height: 0;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
     transition: max-height 0.4s ease-out;
   }
   
-  #filter.active {
-    overflow: hidden;
+  .toggle-content.active {
+    padding: 1rem;      
+    opacity: 1
   }
