style: improve shopping list layout and responsiveness

--- a/css/components.css
+++ b/css/components.css
@@ -15,3 +15,4 @@
 @import url('./components/recipes.css');
 @import url('./components/form.css');
 @import url('./components/table.css');
+@import url('./components/shoppingList.css');
