--- a/css/variables.css
+++ b/css/variables.css
@@ -24,6 +24,7 @@
     --color-bg-paper: #fdf3e7;         /* color old paper */
     --color-bg-table-hover:#DDE6D1;    /* table cell hover */
     --color-bg-hamburguer: #DADB68; /* hamburguer menu background */
+    --colo-bg-post-it: #d4edb5;      /* post-it style background */
 
     /* ==== Text ==== */
     --color-text: #2E3A1F;             /* Primary text */
