--- a/css/layout.css
+++ b/css/layout.css
@@ -119,3 +119,24 @@
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
+/* Shopping List */
+.columns {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem; 
+  
+}
+
+#generateListBtn{
+  margin: 1rem;
+}
+
+.auto-buttons-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+
