--- a/css/base.css
+++ b/css/base.css
@@ -49,7 +49,7 @@ section{
     padding: var(--spacing-md);
 }
 
-h1{
+.h1{
     display: flex;
     text-align: center;
     justify-content: center;
@@ -91,4 +91,19 @@ hr{
     font-size: 0.9rem;
   }
 
+  footer.credits {
+    font-size: 0.8rem;
+    color:white;
+    text-align: center;
+    margin-top: 2rem;
+  }
   
+  footer.credits a {
+    color: inherit;
+    text-decoration: underline;
+  }
+  
+  footer.credits p {
+    margin: 0;
+    line-height: 1.6;
+  }
