--- a/css/layout.css
+++ b/css/layout.css
@@ -81,6 +81,7 @@
   background-position: center 69%;  
   background-repeat: no-repeat;
   margin: 0 auto;
+  padding-top: 6rem;
 }
 
 #recipes-list {
