--- a/css/utilities.css
+++ b/css/utilities.css
@@ -9,6 +9,19 @@
 
 .hidden { display: none !important }
 
+.sr-only {
+    position:absolute!important;
+    width:1px;
+    height:1px;
+    padding:0;
+    margin:-1px;
+    overflow:hidden;
+    clip:rect(0,0,0,0);
+    white-space:nowrap;
+    border:0;
+  }
+  
+
 .btn {
     background-color: var(--color-surface);
     margin-right: 0.5rem;
