fix (section-list): adjust layout on medium screens

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -22,7 +22,10 @@
   #manualList li {
         
     padding-left: 0;     
-   
+  }
+  #section-list h2 {
+    margin-top: 6rem;
+    font-size: 1.5rem;
   }
  
 }
