--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,7 +1,7 @@
 /* =========================
    HEADER
    ========================= */
-   header h1 {
+   header .navbar h1 a{
     margin-top: 0;
     margin-bottom: 0.5rem; 
     color: var(--color-title);
