--- a/css/variables.css
+++ b/css/variables.css
@@ -61,6 +61,7 @@
     --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.1);
     --shadow-md:  2px 2px 6px rgba(0,0,0,0.2);
     --shadow-lg: 0 8px 20px rgba(0,0,0,0.3);
+    --header-shadow: 0 3px 15px rgba(255, 255, 255, 0.9)
 
    --border-sm: 1px solid #d1bfa7;
   
