--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -134,7 +134,10 @@
   /* shopping list */
   #shoppingList,
   #manualList {
-    column-count: 1;  
+    column-count: 1;
+    max-height: 60vh; 
+    overflow-y: auto; 
+    padding-right: 0.5rem;  
   }
   #manualQty{
     width: 40%;
