--- a/css/components/shoppingList.css
+++ b/css/components/shoppingList.css
@@ -20,6 +20,9 @@
 }
 #shoppingList,
 #manualList {
+  display: block;
+  width: 100%;
+  margin: 0 auto 1rem;
   list-style: none;       
   padding-left: 0;
   margin: 0;
